@@ -81,6 +81,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Clojure                Jess Johnson
 - CMake                  Daniel Nelson
 - COBOL                  Benny Baumann
+- CoffeeScript           Trevor Burnham
 - ColdFusion             Diego
 - Cuesheet               Benny Baumann
 - D                      Thomas Kuehne
